--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/fortisroofing-07-22/">https://rank-fortress-digital-agency.github.io/fortisroofing-07-22/</a><br>
+                <a target="_bLank" href="http://fortisroofing-07-22.s3-website-us-east-1.amazonaws.com">http://fortisroofing-07-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://bright-sunflower-cec5d6.netlify.app/">https://bright-sunflower-cec5d6.netlify.app/</a><br>
             </section>
 
         </div>
